@@ -28,12 +28,20 @@ export CFLAGS
 export CXXFLAGS
 
 DEB_SCONS_OPTIONS          := library=shared soname=on shlibtype=hidden
+DEB_SCONS_BUILD_OPTIONS    := sample=shell
+DEB_SCONS_BUILD_TARGET     := library sample cctests
 DEB_SCONS_INSTALL_OPTIONS  := $(DEB_SCONS_OPTIONS) DESTDIR=$(DEB_DESTDIR)
 
 clean::
 	#if [ -f src/version.cc~ ] ; then mv src/version.cc~ src/version.cc ; fi
 	rm -f tools/*.pyc libv8-${SONAME}.so
 	rm -rf obj
+	rm -f test/*/*.pyc
+	rm -f shell
+
+common-post-build-impl::
+	# need to preload freshly compiled lib.
+	LD_PRELOAD=$(CURDIR)/libv8-2.3.9.so $(CURDIR)/tools/test.py --no-build cctest mjsunit
 
 common-install-impl::
 	cd debian/tmp/usr/lib/ ; \
